--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+  <!-- Site favicon -->
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <!-- Fallback for older browsers -->
+  <link rel="alternate icon" href="/favicon.svg">
+  <meta name="theme-color" content="#030014" />
     <style>
       :root {
         --bg-dark: #030014;
